--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/trello-clone-angular17",
+            "outputPath": "dist/trello-clone",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
